tests/examples/parse_errors.err
Parse Error in line 4, column 13 of "parse_errors.af"
|   { x: 4, x: 5},
|               ^
Error: Redefinition of label 'x' in map

Parse Error in line 14, column 24 of "parse_errors.af"
|   {1, "zing zing", 4n  kd ( $ $, "this is": "correct"} = ``,
|                          ^
Error: Ill formed member

Parse Error in line 15, column 22 of "parse_errors.af"
|   { "good", second: njd %% & 62 ] , third: "good"} = ``,
|                        ^
Error: Ill formed member

Parse Error in line 16, column 16 of "parse_errors.af"
|   ["this", "next"  ( % ^&, "last"] = ``,
|                  ^
Error: Ill formed member

Parse Error in line 21, column 21 of "parse_errors.af"
|       4 * (x: 3) = ``,
|                       ^
Error: Redefinition of label 'x' in map

Parse Error in line 23, column 16 of "parse_errors.af"
|       y: 12 = ``,
|                  ^
Error: Redefinition of label 'y' in map

Parse Error in line 40, column 56 of "parse_errors.af"
|   	x / hello ^ (: 2) = `Eval Error: Unresolved name "x"`,
|                                                          ^
Error: Redefinition of map target

7 Parse Errors encountered


line 8, column 26 of "parse_errors.af" Eval Error: Circular dependency
line 9, column 26 of "parse_errors.af" Eval Error: Circular dependency
line 10, column 26 of "parse_errors.af" Eval Error: Circular dependency
line 28, column 30 of "parse_errors.af" Eval Error: Circular dependency
line 30, column 26 of "parse_errors.af" Eval Error: Circular dependency
line 40, column 22 of "parse_errors.af" Eval Error: Unresolved name "x"
6 Eval Errors encountered
